bugfix: adiciona traduçao dos botoes de log

--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -11,8 +11,8 @@
       </ul>
 
       <div class="pull-right">
-        <button class="btn btn-danger" id="debug-clear" data-toggle="tooltip" title="text_debug_clear"><i class="fa fa-trash"></i></button>
-        <button class="btn btn-success" id="debug-download" data-toggle="tooltip" title="text_debug_download"><i class="fa fa-download"></i></button>
+        <button class="btn btn-danger" id="debug-clear" data-toggle="tooltip" title="{{ text_debug_clear }}"><i class="fa fa-trash"></i></button>
+        <button class="btn btn-success" id="debug-download" data-toggle="tooltip" title="{{ text_debug_download }}"><i class="fa fa-download"></i></button>
         <button type="submit" form="form-payment" data-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary"><i class="fa fa-save"></i></button>
         <a href="{{ cancel }}" data-toggle="tooltip" title="{{ button_cancel }}" class="btn btn-default"><i class="fa fa-reply"></i></a>
       </div>
