refactor: adiciona alerta sobre taxa do boleto

--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -506,6 +506,8 @@
                 <label for="input-methods-boleto-minimum-amount" class="control-label col-sm-2">{{ entry_minimum_amount }}</label>
                 <div class="col-sm-10">
                   <input type="text" name="methods_boleto_minimum_amount" value="{{ methods_boleto_minimum_amount }}" id="input-methods-boleto-minimum-amount" class="form-control" />
+
+                  <div class="bg-info" style="padding: 15px">{{ text_boleto_fee }}</div>
                 </div>
               </div>
             </fieldset>
