feat: adiciona funçao para envio de telemetria

--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -141,6 +141,13 @@
                 </select>
               </div>
             </div>
+
+            <div class="form-group">
+              <label for="input-newsletter" class="control-label col-sm-2">{{ entry_newsletter }}</label>
+              <div class="col-sm-10">
+                <input type="text" name="newsletter" id="input-newsletter" class="form-control" />
+              </div>
+            </div>
           </div>
 
           <!-- ----------------- -->
