refactor: adiciona atributo _PSR_ aa _tag_ FORM
O atributo sera utilizado para identificar o
formulario correto para inserçao das URLs
de telemetria e newsletter

--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -58,7 +58,7 @@
           <li><a href="#tab-debug" data-toggle="tab">{{ tab_debug }}</a></li>
         </ul>
 
-        <form action="{{ action }}" class="form form-horizontal tab-content" id="form-payment" method="POST">
+        <form action="{{ action }}" class="form form-horizontal tab-content" id="form-payment" method="POST" psr>
           <!-- -------- -->
           <!-- Tab Home -->
           <!-- -------- -->
