refactor: corrige URL da documentaçao

--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -19,7 +19,7 @@
 
           <ul class="dropdown-menu">
             <li><a href="https://github.com/opencart-extension/PagSeguro-Checkout-Transparente" target="_blank">GitHub</a></li>
-            <li><a href="#" target="_blank">Documentação</a></li>
+            <li><a href="https://opencart-extension.github.io/PagSeguro-Checkout-Transparente" target="_blank">Documentação</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="https://www.valdeirsantana.com.br" target="_blank">Portfolio</a></li>
           </ul>
