--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -110,6 +110,16 @@
             </div>
 
             <div class="form-group required">
+              <label for="input-debug" class="control-label col-sm-2">{{ entry_debug }}</label>
+              <div class="col-sm-10">
+                <select name="debug" id="input-debug" class="form-control">
+                  <option value="1" {{ debug ?? 'selected' }}>{{ text_enabled }}</option>
+                  <option value="0" {{ debug ?: 'selected' }}>{{ text_disabled }}</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="form-group required">
               <label for="input-customer-notify" class="control-label col-sm-2">{{ entry_customer_notify }}</label>
               <div class="col-sm-10">
                 <select name="customer_notify" id="input-customer-notify" class="form-control">
