--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -204,7 +204,7 @@
               </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group required">
               <label for="input-custom-fields-birthday" class="control-label col-sm-2">{{ entry_custom_field_birthdate }}</label>
               <div class="col-sm-10">
                 <select name="custom_fields_birthday" id="input-custom-fields-birthday" class="form-control">
@@ -218,6 +218,9 @@
                     {% endif %}
                   {% endfor %}
                 </select>
+                {% if error_field_custom_fields_birthday %}
+                <span class="text-danger">{{ error_field_custom_fields_birthday }}</span>
+                {% endif %}
               </div>
             </div>
           </div>
