--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -167,17 +167,22 @@
             <div class="form-group required">
               <label for="input-custom-fields-cpf" class="control-label col-sm-2">{{ entry_custom_field_cpf }}</label>
               <div class="col-sm-10">
-                <select name="custom_fields_cpf" id="input-custom-fields-cpf" class="form-control">
-                  <option value="">{{ text_none }}</option>
+                <div class="input-group">
+                  <select name="custom_fields_cpf" id="input-custom-fields-cpf" class="form-control">
+                    <option value="">{{ text_none }}</option>
 
-                  {% for custom_field in custom_fields %}
-                    {% if custom_field.custom_field_id == custom_fields_cpf %}
-                    <option value="{{ custom_field.custom_field_id }}" selected>{{ custom_field.name }}</option>
-                    {% else %}
-                    <option value="{{ custom_field.custom_field_id }}">{{ custom_field.name }}</option>
-                    {% endif %}
-                  {% endfor %}
-                </select>
+                    {% for custom_field in custom_fields %}
+                      {% if custom_field.custom_field_id == custom_fields_cpf %}
+                      <option value="{{ custom_field.custom_field_id }}" selected>{{ custom_field.name }}</option>
+                      {% else %}
+                      <option value="{{ custom_field.custom_field_id }}">{{ custom_field.name }}</option>
+                      {% endif %}
+                    {% endfor %}
+                  </select>
+                  <div class="input-group-btn">
+                    <a href="{{ create_custom_field_link }}" class="btn btn-primary">{{ text_create_custom_field }}</a>
+                  </div>
+                </div>
                 {% if error_field_custom_fields_cpf %}
                 <span class="text-danger">{{ error_field_custom_fields_cpf }}</span>
                 {% endif %}
@@ -187,17 +192,22 @@
             <div class="form-group required">
               <label for="input-custom-fields-number" class="control-label col-sm-2">{{ entry_custom_field_address_number }}</label>
               <div class="col-sm-10">
-                <select name="custom_fields_number" id="input-custom-fields-number" class="form-control">
-                  <option value="">{{ text_none }}</option>
+                <div class="input-group">
+                  <select name="custom_fields_number" id="input-custom-fields-number" class="form-control">
+                    <option value="">{{ text_none }}</option>
 
-                  {% for custom_field in custom_fields %}
-                    {% if custom_field.custom_field_id == custom_fields_number %}
-                    <option value="{{ custom_field.custom_field_id }}" selected>{{ custom_field.name }}</option>
-                    {% else %}
-                    <option value="{{ custom_field.custom_field_id }}">{{ custom_field.name }}</option>
-                    {% endif %}
-                  {% endfor %}
-                </select>
+                    {% for custom_field in custom_fields %}
+                      {% if custom_field.custom_field_id == custom_fields_number %}
+                      <option value="{{ custom_field.custom_field_id }}" selected>{{ custom_field.name }}</option>
+                      {% else %}
+                      <option value="{{ custom_field.custom_field_id }}">{{ custom_field.name }}</option>
+                      {% endif %}
+                    {% endfor %}
+                  </select>
+                  <div class="input-group-btn">
+                    <a href="{{ create_custom_field_link }}" class="btn btn-primary">{{ text_create_custom_field }}</a>
+                  </div>
+                </div>
                 {% if error_field_custom_fields_number %}
                 <span class="text-danger">{{ error_field_custom_fields_number }}</span>
                 {% endif %}
@@ -207,17 +217,22 @@
             <div class="form-group">
               <label for="input-custom-fields-birthday" class="control-label col-sm-2">{{ entry_custom_field_birthdate }}</label>
               <div class="col-sm-10">
-                <select name="custom_fields_birthday" id="input-custom-fields-birthday" class="form-control">
-                  <option value="">{{ text_none }}</option>
+                <div class="input-group">
+                  <select name="custom_fields_birthday" id="input-custom-fields-birthday" class="form-control">
+                    <option value="">{{ text_none }}</option>
 
-                  {% for custom_field in custom_fields %}
-                    {% if custom_field.custom_field_id == custom_fields_birthday %}
-                    <option value="{{ custom_field.custom_field_id }}" selected>{{ custom_field.name }}</option>
-                    {% else %}
-                    <option value="{{ custom_field.custom_field_id }}">{{ custom_field.name }}</option>
-                    {% endif %}
-                  {% endfor %}
-                </select>
+                    {% for custom_field in custom_fields %}
+                      {% if custom_field.custom_field_id == custom_fields_birthday %}
+                      <option value="{{ custom_field.custom_field_id }}" selected>{{ custom_field.name }}</option>
+                      {% else %}
+                      <option value="{{ custom_field.custom_field_id }}">{{ custom_field.name }}</option>
+                      {% endif %}
+                    {% endfor %}
+                  </select>
+                  <div class="input-group-btn">
+                    <a href="{{ create_custom_field_link }}" class="btn btn-primary">{{ text_create_custom_field }}</a>
+                  </div>
+                </div>
                 {% if error_field_custom_fields_birthday %}
                 <span class="text-danger">{{ error_field_custom_fields_birthday }}</span>
                 {% endif %}
