refacator: adiciona classe css "hidden"
Alguns temas não seguem o padrão do OpenCart ou não utilizam o boostrap. Como o módulo
precisa da classe css `hidden` para esconder alguns elementos como botão de download do boleto,
isso acaba gerando um problema visual nesses temas.

resolve #40

--- a/upload/catalog/view/theme/default/template/extension/payment/pagseguro_boleto.twig
+++ b/upload/catalog/view/theme/default/template/extension/payment/pagseguro_boleto.twig
@@ -1,3 +1,9 @@
+<style>
+  .hidden {
+    display: none;
+  }
+</style>
+
 {% if warning %}
   <div class="alert alert-danger" id="warning" role="alert">{{ warning }}</div>
 {% else %}
