refactor(language): adiciona textos
Signed-off-by: Valdeir S <contact@valdeir.dev>

--- a/upload/admin/view/template/extension/payment/pagseguro.twig
+++ b/upload/admin/view/template/extension/payment/pagseguro.twig
@@ -19,7 +19,7 @@
 
           <ul class="dropdown-menu">
             <li><a href="https://github.com/opencart-extension/PagSeguro-Checkout-Transparente" target="_blank">GitHub</a></li>
-            <li><a href="https://opencart-extension.github.io/PagSeguro-Checkout-Transparente" target="_blank">Documentação</a></li>
+            <li><a href="https://opencart-extension.github.io/PagSeguro-Checkout-Transparente" target="_blank">{{ text_documentation }}</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="https://www.valdeirsantana.com.br" target="_blank">Portfolio</a></li>
           </ul>
@@ -696,14 +696,14 @@
               <div class="col-sm-12">
                 <div class="col-sm-3">
                     <fieldset>
-                      <caption>Filtrar por data</caption>
+                      <caption>{{ text_filter_date }}</caption>
                       <input type="text" id="filter-log-date" class="form-control" />
                     </fieldset>
                 </div>
 
                 <div class="col-sm-3">
                   <fieldset>
-                    <caption>Filtrar por nível</caption>
+                    <caption>{{ text_filter_level }}</caption>
                     <select id="filter-log-level" class="form-control">
                       <option value="0">{{ text_select_all }}</option>
                       <option value="100">Debug</option>
